<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.register.fragment.regSecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/name"
                android:inputType="text" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_below="@id/et_name"
                android:layout_alignStart="@id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/red"/>
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/layout_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/age"
                android:inputType="number" />
            <TextView
                android:id="@+id/tv_age"
                android:layout_below="@id/et_age"
                android:layout_alignStart="@id/et_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/red"/>
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_age"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_sex"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                />
            <RadioGroup
                android:id="@+id/rg_sex"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_toEndOf="@id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:paddingStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:checked="true"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_sex"
            app:layout_constraintStart_toStartOf="parent"

            android:id="@+id/layout_domain"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/tv_domain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/domain"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/et_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_domain" />
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_domain"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_introduction"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/et_profile"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:background="@drawable/rect_radius5"
                android:minLines="8"
                android:maxLines="8"
                android:gravity="top"
                android:padding="5dp"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>