<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.register.fragment.regFirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            android:id="@+id/layout_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/account"
                android:inputType="text" />
            <TextView
                android:id="@+id/tv_account"
                android:layout_below="@id/et_account"
                android:layout_alignStart="@id/et_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/red"/>
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_account"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/tv_password"
                android:layout_below="@id/et_password"
                android:layout_alignStart="@id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/red"/>
        </RelativeLayout>
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="20dp"
            android:id="@+id/layout_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <EditText
                android:id="@+id/et_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/password_repeat"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/tv_password_repeat"
                android:layout_below="@id/et_password_repeat"
                android:layout_alignStart="@id/et_password_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/red"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>